Add templates for category list and item info, edit and delete

--- a/templates/categorylist.html
+++ b/templates/categorylist.html
@@ -1,5 +1,5 @@
 {% extends "baselayout.html" %}
-{% block title %} Catalog App {% endblock %}
+{% block title %} Category {% endblock %}
 {% block content %}
 	<div>
 		<div>
@@ -15,18 +15,16 @@
 		</div>
 		<div>
 			<div>
-				<h2>Latest Items</h2>
+				<h2>Category Selected</h2>
 				<div><a href="#">Add Item</a></div>	
 			</div>
 			<div>
 				<ul>
 					<li>NBA Basketball</li>
 					<li>Basketball Shoes</li>
-					<li>Shin guards</li>
-					<li>Tennis racket</li>
-					<li>Rugby ball</li>
-					<li>Swimming goggles</li>
-					<li>Endeavour Snowboard</li>
+					<li>Jersey</li>
+					<li>socks</li>
+					<li>ankle brace</li>
 				</ul>
 			</div>
 		</div>
