Add blank database and create static links to list items in main page

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -5,12 +5,12 @@
 		<div>
 			<h2>Categories</h2>
 			<ul>
-				<li>Basketball</li>
-				<li>Soccer</li>
-				<li>Tennis</li>
-				<li>Rugby</li>
-				<li>Swimming</li>
-				<li>Snowboarding</li>
+				<li><a href="#">Basketball</a></li>
+				<li><a href="#">Soccer</a></li>
+				<li><a href="#">Tennis</a></li>
+				<li><a href="#">Rugby</a></li>
+				<li><a href="#">Swimming</a></li>
+				<li><a href="#">Snowboarding</a></li>
 			</ul>
 		</div>
 		<div>
@@ -20,13 +20,13 @@
 			</div>
 			<div>
 				<ul>
-					<li>NBA Basketball</li>
-					<li>Basketball Shoes</li>
-					<li>Shin guards</li>
-					<li>Tennis racket</li>
-					<li>Rugby ball</li>
-					<li>Swimming goggles</li>
-					<li>Endeavour Snowboard</li>
+					<li><a href="#">NBA Basketball</a></li>
+					<li><a href="#">Basketball Shoes</a></li>
+					<li><a href="#">Shin guards</a></li>
+					<li><a href="#">Tennis racket</a></li>
+					<li><a href="#">Rugby ball</a></li>
+					<li><a href="#">Swimming goggles</a></li>
+					<li><a href="#">Endeavour Snowboard</a></li>
 				</ul>
 			</div>
 		</div>
