--- a/templates/newitem.html
+++ b/templates/newitem.html
@@ -23,10 +23,12 @@
 					<option value="snowboarding">Snowboarding</option>
 				</select>
 			</div>
+			<div>
+				<button>submit</button>
+			</div>
 		</form>
 		<div>
 			<div><a href="#">cancel</a></div>
 		</div>
 	</div>
-{% endblock %}
 {% endblock %}
