--- a/templates/newitem.html
+++ b/templates/newitem.html
@@ -28,7 +28,7 @@
 			</div>
 		</form>
 		<div>
-			<div><a href="#">cancel</a></div>
+			<div><a href="{{url_for('catalog')}}">cancel</a></div>
 		</div>
 	</div>
 {% endblock %}
