--- a/templates/iteminfo.html
+++ b/templates/iteminfo.html
@@ -10,5 +10,8 @@
 			<div><a href="#">Edit</a></div>
 			<div><a href="#">Delete</a></div>
 		</div>
+		<div>
+			<div><a href="{{url_for('catalog')}}">back</a></div>
+		</div>
 	</div>
 {% endblock %}
