--- a/templates/categorylist.html
+++ b/templates/categorylist.html
@@ -18,7 +18,7 @@
 			<div>
 				<ul>
 					{% for i in items %}
-					<li><a href="{{url_for('itemInfo', category=i.category, item=i)}}">{{i.name.title()}}</a></li>
+					<li><a href="{{url_for('itemInfo', category=i.category, item_name=i.name, item_id=i.id)}}">{{i.name.title()}}</a></li>
 					{% endfor %}
 				</ul>
 			</div>
