--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div>
 		<h2>Edit Item</h2>
-		<form action="{{url_for('editItem')}}" method="post" id="edit-item-form">
+		<form action="{{url_for('editItem', item_name=item.name, item_id=item.id)}}" method="post" id="edit-item-form">
 			<div>
 				<label for="name">Item name:</label>
 				<input type="text" name="name">
