--- a/templates/deleteitem.html
+++ b/templates/deleteitem.html
@@ -3,14 +3,14 @@
 {% block content %}
 	<div>
 		<h2>Delete Item</h2>
-		<form action="{{url_for('deleteItem')}}" method="post">
+		<form action="{{url_for('deleteItem', item_name=item.name, item_id=item.id)}}" method="post">
 			<div>
 				Are you sure you want to delete this item?
 			</div>
 			<div>submit</div>
 		</form>
 		<div>
-			<div><a href="#">cancel</a></div>
+			<div><a href="{{url_for('itemInfo', category=item.category, item_name=item.name, item_id=item.id)}}">cancel</a></div>
 		</div>
 	</div>
 {% endblock %}
