--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -26,7 +26,7 @@
 			<div>save</div>
 		</form>
 		<div>
-			<div><a href="#">cancel</a></div>
+			<div><a href="{{url_for('itemInfo', category=item.category, item_name=item.name, item_id=item.id)}}">cancel</a></div>
 		</div>
 	</div>
 {% endblock %}
