--- a/templates/iteminfo.html
+++ b/templates/iteminfo.html
@@ -8,7 +8,7 @@
 		</div>
 		<div>
 			<div><a href="{{url_for('editItem', item_name=item.name, item_id=item.id)}}">Edit</a></div>
-			<div><a href="#">Delete</a></div>
+			<div><a href="{{url_for('deleteItem', item_name=item.name, item_id=item.id)}}">Delete</a></div>
 		</div>
 		<div>
 			<div><a href="{{url_for('catalog')}}">back</a></div>
