--- a/templates/deleteitem.html
+++ b/templates/deleteitem.html
@@ -5,7 +5,7 @@
 		<h2>Delete Item</h2>
 		<form action="{{url_for('deleteItem', item_name=item.name, item_id=item.id)}}" method="post">
 			<div>
-				Are you sure you want to delete this item?
+				Are you sure you want to delete {{item.name}}?
 			</div>
 			<div>submit</div>
 		</form>
