--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -17,16 +17,16 @@
 				<select name="category">
 					<option value="basketball">Basketball</option>
 					<option value="soccer" {% if item.category=='soccer' %} selected="selected" {% endif %}>Soccer</option>
-					<option value="tennis">Tennis</option>
-					<option value="rugby">Rugby</option>
-					<option value="swimming">Swimming</option>
-					<option value="snowboarding">Snowboarding</option>
+					<option value="tennis" {% if item.category=='tennis' %} selected="selected" {% endif %}>Tennis</option>
+					<option value="rugby" {% if item.category=='rugby' %} selected="selected" {% endif %}>Rugby</option>
+					<option value="swimming" {% if item.category=='swimming' %} selected="selected" {% endif %}>Swimming</option>
+					<option value="snowboarding" {% if item.category=='snowboarding' %} selected="selected" {% endif %}>Snowboarding</option>
 				</select>
 			</div>
-			<div>save</div>
+			<div><input type="submit" name="Save"></div>
 		</form>
 		<div>
-			<div><a href="{{url_for('itemInfo', category=item.category, item_name=item.name, item_id=item.id)}}">cancel</a></div>
+			<div><a href="{{url_for('itemInfo', category=item.category, item_name=item.name, item_id=item.id)}}">Cancel</a></div>
 		</div>
 	</div>
 {% endblock %}
