--- a/templates/iteminfo.html
+++ b/templates/iteminfo.html
@@ -11,7 +11,7 @@
 			<div><a href="{{url_for('deleteItem', item_name=item.name, item_id=item.id)}}">Delete</a></div>
 		</div>
 		<div>
-			<div><a href="{{url_for('catalog')}}">back</a></div>
+			<div><a href="{{url_for('catalog')}}">Back</a></div>
 		</div>
 	</div>
 {% endblock %}
