--- a/templates/newitem.html
+++ b/templates/newitem.html
@@ -2,6 +2,17 @@
 {% block title %} New Catalog Item {% endblock %}
 {% block content %}
 	<div>
+		{% with messages = get_flashed_messages() %}
+		{% if messages %}
+		<ul>
+			{% for message in messages %}
+			<li><strong>{{message}}</strong></li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+		{% endwith %}
+	</div>
+	<div>
 		<h2>New Item</h2>
 		<form action="{{url_for('newItem')}}" method="post" id="new-item-form">
 			<div>
