--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -2,6 +2,17 @@
 {% block title %} Edit Catalog Item {% endblock %}
 {% block content %}
 	<div>
+		{% with messages = get_flashed_messages() %}
+		{% if messages %}
+		<ul>
+			{% for message in messages %}
+			<li><strong>{{message}}</strong></li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+		{% endwith %}
+	</div>
+	<div>
 		<h2>Edit Item</h2>
 		<form action="{{url_for('editItem', item_name=item.name, item_id=item.id)}}" method="post" id="edit-item-form">
 			<div>
