--- a/templates/iteminfo.html
+++ b/templates/iteminfo.html
@@ -2,6 +2,17 @@
 {% block title %} Item {% endblock %}
 {% block content %}
 	<div>
+		{% with messages = get_flashed_messages() %}
+		{% if messages %}
+		<ul>
+			{% for message in messages %}
+			<li><strong>{{message}}</strong></li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+		{% endwith %}
+	</div>
+	<div>
 		<h2>{{item.name}}</h2>
 		<div>
 			{{item.description}}
