--- a/templates/categorylist.html
+++ b/templates/categorylist.html
@@ -3,10 +3,21 @@
 {% block content %}
 	<div>
 		<div>
+			{% with messages = get_flashed_messages() %}
+			{% if messages %}
+			<ul>
+				{% for message in messages %}
+				<li><strong>{{message}}</strong></li>
+				{% endfor %}
+			</ul>
+			{% endif %}
+			{% endwith %}
+		</div>
+		<div>
 			<h2>Categories</h2>
 			<ul>
 				{% for i in items_grouped_by_category %}
-				<li><a href="categoryList, category=i.category">{{i.category.title()}}</a></li>
+				<li><a href="{{url_for('categoryList', category=i.category)}}">{{i.category.title()}}</a></li>
 				{% endfor %}
 			</ul>
 		</div>
