Add signinCallback function

--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,9 @@
             {% endif %}
             {% endwith %}
         </div>
-        <div class="g-signin2"
+        <div id="result"></div>
+        <div id="signinButton" 
+        class="g-signin2"
         data-onsuccess="onSignIn"
         data-theme="dark"
         data-scope="openid"
@@ -47,6 +49,33 @@
             // The ID token you need to pass to your backend:
             var id_token = googleUser.getAuthResponse().id_token;
             console.log("ID Token: " + id_token);
+        };
+
+        function signInCallback(authResult) {
+            if (authResult['code']) {
+                // Hide the sign-in button once the user is authorized
+                $('#signinButton').attr('style', 'display: none');
+                // Send the one-time use code to the server, if the server responds, write a 'login successful' message to page and then redirect to the main page
+                $.ajax({
+                    type: 'POST',
+                    url: '/gconnect?state={{STATE}}',
+                    processData: false,
+                    contentType: 'application/octet-stream; charset=utf-8',
+                    data: authresult['code'],
+                    success: function(result) {
+                        if (result) {
+                            $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
+                            setTimeout(function() {
+                                window.location.href = "/restaurant";
+                            }, 4000);
+                        } else if (authResult['error']) {
+                            console.log('There was an error: ' + authResult['error']);
+                        } else {
+                            $('#result').html('Failed to make a server side call. Check your configuration and console.');
+                        }
+                    }
+                })
+            }
         };
     </script>
 {% endblock %}
