--- a/templates/login.html
+++ b/templates/login.html
@@ -35,6 +35,7 @@
     </div>
 {% endblock %}
 {% block scripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
         function onSignIn(googleUser) {
             // Useful data for your client-side scripts:
