--- a/templates/baselayout.html
+++ b/templates/baselayout.html
@@ -11,10 +11,9 @@
     <div>
         <a href="{{url_for('catalog')}}"><h1>Catalog App</h1></a>
         <a href="{{url_for('showLogin')}}"><div>Sign in</div></a>
-        <a href="#" onclick="signOut();"><div>Sign out</div></a>
+        <a href="{{url_for('showLogin')}}" onclick="signOut();"><div>Sign out</div></a>
     </div>
     {% block content %}{% endblock %}
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script>
         function signOut() {
 			var auth2 = gapi.auth2.getAuthInstance();
