--- a/templates/baselayout.html
+++ b/templates/baselayout.html
@@ -11,17 +11,9 @@
     <div>
         <a href="{{url_for('catalog')}}"><h1>Catalog App</h1></a>
         <a href="{{url_for('showLogin')}}"><div>Sign in</div></a>
-        <a href="{{url_for('showLogin')}}" onclick="signOut();"><div>Sign out</div></a>
+        <a href="{{url_for('gdisconnect')}}"><div>Sign out</div></a>
     </div>
     {% block content %}{% endblock %}
-    <script>
-        function signOut() {
-			var auth2 = gapi.auth2.getAuthInstance();
-			auth2.signOut().then(function() {
-				console.log('User signed out.');
-			});
-		}
-    </script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
