--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <ul>
-                    {% for i in items %}
+                    {% for i in items_latest %}
                     <li><a href="{{url_for('itemInfo', category=i.category, item_name=i.name, item_id=i.id)}}">{{i.name.title()}}</a></li>
                     {% endfor %}
                 </ul>
