--- a/templates/iteminfo.html
+++ b/templates/iteminfo.html
@@ -17,10 +17,12 @@
         <div>
             {{item.description}}
         </div>
+        {% if 'username' in session %}
         <div>
             <div><a href="{{url_for('editItem', item_name=item.name, item_id=item.id)}}">Edit</a></div>
             <div><a href="{{url_for('deleteItem', item_name=item.name, item_id=item.id)}}">Delete</a></div>
         </div>
+        {% endif %}
         <div>
             <div><a href="{{url_for('catalog')}}">Back</a></div>
         </div>
