--- a/templates/iteminfo.html
+++ b/templates/iteminfo.html
@@ -2,29 +2,18 @@
 {% block title %} Item {% endblock %}
 {% block content %}
     <div>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li><strong>{{message}}</strong></li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
-    </div>
-    <div>
         <h2>{{item.name}}</h2>
         <div>
             {{item.description}}
         </div>
         {% if 'username' in session %}
-        <div>
-            <div><a href="{{url_for('editItem', item_name=item.name, item_id=item.id)}}">Edit</a></div>
-            <div><a href="{{url_for('deleteItem', item_name=item.name, item_id=item.id)}}">Delete</a></div>
+        <div id="btns-div">
+            <div class="btn"><a href="{{url_for('editItem', item_name=item.name, item_id=item.id)}}">Edit</a></div>
+            <div class="btn"><a href="{{url_for('deleteItem', item_name=item.name, item_id=item.id)}}">Delete</a></div>
         </div>
         {% endif %}
         <div>
-            <div><a href="{{url_for('catalog')}}">Back</a></div>
+            <div class="btn"><a href="{{url_for('catalog')}}">Back</a></div>
         </div>
     </div>
 {% endblock %}
