Restrict access for adding new item

--- a/templates/newitem.html
+++ b/templates/newitem.html
@@ -24,11 +24,11 @@
                 </select>
             </div>
             <div>
-                <button class="btn">submit</button>
+                <button class="btn">Submit</button>
             </div>
         </form>
         <div>
-            <div class="btn"><a href="{{url_for('catalog')}}">cancel</a></div>
+            <div class="btn"><a href="{{url_for('catalog')}}">Cancel</a></div>
         </div>
     </div>
 {% endblock %}
